--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-HTTP_PROXY=http://mXcub9:v9NTxt@149.28.161.95:10745
-HTTPS_PROXY=http://mXcub9:v9NTxt@149.28.161.95:10745
+HTTP_PROXY=XXX
+HTTPS_PROXY=XXX
 NO_PROXY=localhost,127.0.0.1
